<resources>
    <string name="app_name">TourGuide</string>
    <string name="main_name">Your Guide to Alex</string>
    <string name="history_name">Historical Places</string>
    <string name="restaurant_name">Restaurants</string>
    <string name="shop_name">Shops</string>
    <string name="transportation_name">Transportation</string>
    <string name="title">name of the place</string>
    <string name="title1">name of the Transportation</string>
    <string name="hist1">Fort Qaitbey</string>
    <string name="hist2">Roman Amphitheatre</string>
    <string name="hist3">Bibliotheca Alexandrina</string>
    <string name="hist4">Stanley Bridge</string>
    <string name="hist5">Montazah Palace</string>
    <string name="hist6">Mosque of Abu al-Abbas</string>
    <string name="hist7">Royal Jewelry Museum</string>
    <string name="hist8">Corniche</string>
    <string name="res1">Fish Market</string>
    <string name="res2">White and Blue Restaurant</string>
    <string name="res3">Roberto Italian Restaurant</string>
    <string name="res4">Sea Gull</string>
    <string name="res5">Chez Gaby </string>
    <string name="res6">Ginger </string>
    <string name="res7">Royal Jewelry Museum</string>
    <string name="res8">Abd El Wahab Village</string>
    <string name="sh1">City Centre Shopping Mall</string>
    <string name="sh2">Orouba Mall Alexandra</string>
    <string name="sh3">Credo</string>
    <string name="sh4">Baron for Cosmetics</string>
    <string name="sh5">Chez Gaby </string>
    <string name="sh6">Oriental Handmade </string>
    <string name="sh7">Royal Jewelry </string>
    <string name="sh8">Village</string>
    <string name="tra1">Cars</string>
    <string name="tra2">Taxi</string>
    <string name="tra3">Bus</string>
    <string name="tra4">tram</string>
    <string name="tra5">Micro Bus </string>
</resources>
